Task5/non-admin-api-allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-network-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: [] 
  egress: [] 
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-to-backend-network-policy
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes:
  - Ingress 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: front-end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-frontend-to-backend-network-policy
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
  - Ingress 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-front-end
---
